# outletavto

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  asgi.py  db.sqlite3  docker-compose.yml  dockerfile  files_list.txt  get_all_codes.py  gunicorn.py  manage.py  nginx.conf  outletauto_nginx.conf  outletavto.sublime-project  passenger_wsgi.py  pyproject.toml  requirements.txt  requirements_win.txt  supervisord.conf  test_bd_connection.py  tlg.bot.py
.github/workflows/: deploy.yml  docker-image.yml
infrastructure/: gunicorn.conf  nginx.conf
myapp/: EmailConfirm.py  UserModel.py  admin.py  backends.py  forms.py  logging.py  models.py  urls.py  urls_api.py  views.py
myapp/forms/: FizForm.py  RegistrationForm.py  UrForm.py
myapp/main_logic/: news_parser.py
myapp/migrations/: 0001_initial.py  0002_delete_fizuser_delete_uruser.py  0003_initial.py  0004_alter_fizuser_password.py  0005_fizuser_is_active_uruser_is_active.py  0006_alter_uruser_is_active.py  0007_emailconfirmation.py  0008_delete_emailconfirmation_delete_fizuser_and_more.py
myapp/models/: PromoCode.py  User.py
myapp/models2/: Email.py
myapp/profile/: UserDetailView.py
myapp/static/outletauto/assets/sass/: _fonts.scss  _mixin.scss
myapp/static/outletavto/: README.md
myapp/static/outletavto/assets/js/: index.js
myapp/static/outletavto/assets/sass/: _main.scss
myapp/static/outletavto/assets/sass/UI/: _header.scss
myapp/templates/: base.html  index.html
myapp/templates/outletauto/: index.html
myapp/templates/outletavto/: index.html
myapp/views/: activate.py  add_auto.py  authorization.py  balance.py  basket.py  call_to_vin.py  catalog.py  catalog_personal_account.py  club.py  company.py  email.py  favorite.py  garage.py  html.py  image_detail.py  main.py  modification.py  news.py  news_page.py  orders.py  passenger_car.py  passenger_car_info.py  payment.py  profile.py  profile_view.py  promotion.py  recovery.py  register.py  registration.py  self_call.py  testcalendar.py  testfilter.py  universal_catalog.py  universal_catalog_card.py  universal_catalog_tire.py  universal_catalog_tire_2.py  universal_catalog_tire_3.py
myproject/: settings.py  urls.py
myproject/myapp/: urls.py
myproject/myapp/templates/: image_detail.html
myproject/myproject/: settings.py
nginx/: nginx.conf
outletavto/: asgi.py  settings.py  urls.py  wsgi.py
static/: style.css
static/admin/css/: responsive.css
static/outletauto/assets/sass/: _media.scss
static/outletavto/assets/sass/: _vars.scss  style.scss
static/ssl/: outletavto.crt  outletavto.key
xlsx/: abcp_articles_info.xlsx
