[tool.poetry]
name = "outletavto"
version = "0.1.0"
description = "Веб приложение outletavto"
authors = ["Daniil <77277774+shamemask@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
drf-yasg = "^1.21.7"


[tool.poetry.group.dev.dependencies]
aiohttp = {version = "3.8.4", allow-prereleases = true}
aiosignal = {version = "1.3.1", allow-prereleases = true}
anyio = {version = "4.0.0", allow-prereleases = true}
asgiref = {version = "3.6.0", allow-prereleases = true}
async-generator = {version = "1.10", allow-prereleases = true}
async-timeout = {version = "4.0.2", allow-prereleases = true}
attrs = {version = "22.2.0", allow-prereleases = true}
beautifulsoup4 = {version = "4.12.2", allow-prereleases = true}
build = {version = "1.0.3", allow-prereleases = true}
cachecontrol = {version = "0.13.1", allow-prereleases = true}
certifi = {version = "2022.12.7", allow-prereleases = true}
cffi = {version = "1.15.1", allow-prereleases = true}
charset-normalizer = {version = "3.1.0", allow-prereleases = true}
cleo = {version = "2.1.0", allow-prereleases = true}
click = {version = "8.1.3", allow-prereleases = true}
colorama = {version = "0.4.6", allow-prereleases = true}
coverage = {version = "7.3.2", allow-prereleases = true}
crashtest = {version = "0.4.1", allow-prereleases = true}
cryptography = {version = "41.0.1", allow-prereleases = true}
defusedxml = {version = "0.7.1", allow-prereleases = true}
distlib = {version = "0.3.7", allow-prereleases = true}
django = {version = "4.1.7", allow-prereleases = true}
django-allauth = {version = "0.54.0", allow-prereleases = true}
django-sass-processor = {version = "1.2.2", allow-prereleases = true}
dulwich = {version = "0.21.6", allow-prereleases = true}
et-xmlfile = {version = "1.1.0", allow-prereleases = true}
exceptiongroup = {version = "1.1.1", allow-prereleases = true}
fastjsonschema = {version = "2.19.0", allow-prereleases = true}
feedparser = {version = "6.0.10", allow-prereleases = true}
filelock = {version = "3.13.1", allow-prereleases = true}
flask = {version = "2.2.3", allow-prereleases = true}
frozenlist = {version = "1.3.3", allow-prereleases = true}
greenlet = {version = "2.0.2", allow-prereleases = true}
gunicorn = {version = "20.1.0", allow-prereleases = true}
h11 = {version = "0.14.0", allow-prereleases = true}
httpcore = {version = "0.17.3", allow-prereleases = true}
httpx = {version = "0.24.1", allow-prereleases = true}
idna = {version = "3.4", allow-prereleases = true}
importlib-metadata = {version = "6.8.0", allow-prereleases = true}
inflection = {version = "0.5.1", allow-prereleases = true}
installer = {version = "0.7.0", allow-prereleases = true}
isodate = {version = "0.6.1", allow-prereleases = true}
itsdangerous = {version = "2.1.2", allow-prereleases = true}
jaraco-classes = {version = "3.3.0", allow-prereleases = true}
jinja2 = {version = "3.1.2", allow-prereleases = true}
jsonschema = {version = "4.17.3", allow-prereleases = true}
keyboard = {version = "0.13.5", allow-prereleases = true}
keyring = {version = "24.3.0", allow-prereleases = true}
lxml = {version = "4.9.3", allow-prereleases = true}
mako = {version = "1.2.4", allow-prereleases = true}
markupsafe = {version = "2.1.2", allow-prereleases = true}
more-itertools = {version = "10.1.0", allow-prereleases = true}
msgpack = {version = "1.0.7", allow-prereleases = true}
multidict = {version = "6.0.4", allow-prereleases = true}
numpy = {version = "1.25.2", allow-prereleases = true}
oauthlib = {version = "3.2.2", allow-prereleases = true}
openai = {version = "0.27.2", allow-prereleases = true}
openapi = {version = "1.1.0", allow-prereleases = true}
openpyxl = {version = "3.1.2", allow-prereleases = true}
outcome = {version = "1.2.0", allow-prereleases = true}
packaging = {version = "23.2", allow-prereleases = true}
pandas = {version = "2.0.3", allow-prereleases = true}
pexpect = {version = "4.8.0", allow-prereleases = true}
pillow = {version = "9.5.0", allow-prereleases = true}
pkginfo = {version = "1.9.6", allow-prereleases = true}
platformdirs = {version = "3.10.0", allow-prereleases = true}
poetry = {version = "1.7.1", allow-prereleases = true}
poetry-core = {version = "1.8.1", allow-prereleases = true}
poetry-plugin-export = {version = "1.6.0", allow-prereleases = true}
protobuf = {version = "3.20.3", allow-prereleases = true}
ptvsd = {version = "4.3.2", allow-prereleases = true}
ptyprocess = {version = "0.7.0", allow-prereleases = true}
pycparser = {version = "2.21", allow-prereleases = true}
pyjwt = {version = "2.7.0", allow-prereleases = true}
pyperclip = {version = "1.8.2", allow-prereleases = true}
pyproject-hooks = {version = "1.0.0", allow-prereleases = true}
pyrsistent = {version = "0.19.3", allow-prereleases = true}
pysocks = {version = "1.7.1", allow-prereleases = true}
python-dateutil = {version = "2.8.2", allow-prereleases = true}
python-telegram-bot = {version = "20.5", allow-prereleases = true}
python3-openid = {version = "3.2.0", allow-prereleases = true}
pytz = {version = "2023.3", allow-prereleases = true}
pywin32-ctypes = {version = "0.2.2", allow-prereleases = true}
rapidfuzz = {version = "3.5.2", allow-prereleases = true}
requests = {version = "2.28.2", allow-prereleases = true}
requests-file = {version = "1.5.1", allow-prereleases = true}
requests-oauthlib = {version = "1.3.1", allow-prereleases = true}
requests-toolbelt = {version = "1.0.0", allow-prereleases = true}
selenium = {version = "4.8.3", allow-prereleases = true}
sgmllib3k = {version = "1.0.0", allow-prereleases = true}
shellingham = {version = "1.5.4", allow-prereleases = true}
six = {version = "1.16.0", allow-prereleases = true}
sniffio = {version = "1.3.0", allow-prereleases = true}
sortedcontainers = {version = "2.4.0", allow-prereleases = true}
soupsieve = {version = "2.5", allow-prereleases = true}
sqlalchemy = {version = "2.0.10", allow-prereleases = true}
sqlparse = {version = "0.4.3", allow-prereleases = true}
tabulate = {version = "0.9.0", allow-prereleases = true}
telegram = {version = "0.0.1", allow-prereleases = true}
tomlkit = {version = "0.12.3", allow-prereleases = true}
tqdm = {version = "4.65.0", allow-prereleases = true}
trio = {version = "0.22.0", allow-prereleases = true}
trio-websocket = {version = "0.10.2", allow-prereleases = true}
trove-classifiers = {version = "2023.11.14", allow-prereleases = true}
typing-extensions = {version = "4.5.0", allow-prereleases = true}
tzdata = {version = "2023.3", allow-prereleases = true}
urllib3 = {version = "1.26.15", allow-prereleases = true}
uvicorn = {version = "0.22.0", allow-prereleases = true}
virtualenv = {version = "20.24.7", allow-prereleases = true}
werkzeug = {version = "2.2.3", allow-prereleases = true}
wsproto = {version = "1.2.0", allow-prereleases = true}
yarl = {version = "1.8.2", allow-prereleases = true}
zeep = {version = "4.2.1", allow-prereleases = true}
zipp = {version = "3.17.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
